HW2/k8s/time-app-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: time-app
spec:
  hosts:
  - "*"
  gateways:
  - time-app-gateway
  http:
  - match:
    - uri:
        prefix: /time
    route:
    - destination:
        host: time-service
        port:
          number: 5000
  - match:
    - uri:
        prefix: /statistics
    route:
    - destination:
        host: time-service
        port:
          number: 5000
